--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -3,3 +3,6 @@
 @import './base/mixins';
 @import './base/normalize';
 @import './base/globales';
+
+//layouts
+@import '../components/Navbar/Navbar';
