--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;500;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Questrial&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 //Fuentes
-$fuente_titulos: 'Qatar2022 Arabic', sans-serif;
-$fuente_base: 'Manrope', sans-serif;
+$fuente_principal: 'Raleway', sans-serif;
+$fuente_secundaria: 'Questrial', sans-serif;
 
 //Tamaños Media Queries
 
@@ -14,7 +14,7 @@ $desktop:102.4rem;
 
 $principal: #362c22;
 $secundario: #2a1f1b;
-$tertiary: #886c54;
+$terciario: #886c54;
 $gris: #46433e;
 $aux: #dcbeb3;
 $blanco: #ffffff;
