--- a/src/components/Navbar/_Navbar.scss
+++ b/src/components/Navbar/_Navbar.scss
@@ -1,5 +1,10 @@
 .navbarContainer{
     width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    background-color: $blanco;
     .nav{
         display: flex;
         align-items: center;
@@ -45,7 +50,7 @@
                     background-color: $blanco;
                     flex-direction: column;
                     margin: 0;
-                    height: 90vh;
+                    height: 100vh;
                     width: 50%;
                     padding: 0;
                     select,a{
