--- a/src/sass/base/_globales.scss
+++ b/src/sass/base/_globales.scss
@@ -12,3 +12,24 @@ html {
 body{
   overflow-x: hidden;
 }
+
+.btn1{
+  border: 2px solid $blanco;
+  background: transparent;
+  color: $blanco;
+  border-radius: .5rem;
+  font-family: $fuente_secundaria;
+  width: 15rem;
+  height: 3rem;
+  font-size: 1.2rem;
+  cursor: pointer;
+  &:hover{
+    background-color: $blanco;
+    color: $principal;
+  }
+  @include tablet{
+    width: 12rem;
+    height: 2.5rem;
+    font-size: 1rem;
+  }
+}
