--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -1,6 +1,6 @@
 //Media Queries
 @mixin telefono {
-    @media (min-width: #{$telefono}){
+    @media (max-width: #{$telefono}){
         @content;
     }
 }
@@ -10,7 +10,7 @@
     }
 }
 @mixin desktop {
-    @media (min-width: #{$desktop}){
+    @media (max-width: #{$desktop}){
         @content;
     }
 }
