Se agrego la seccion de San Rafael con sus estilos desktop y mobile

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -7,3 +7,5 @@
 //layouts
 @import '../components/Navbar/Navbar';
 @import '../components/Header/Header';
+@import '../components/San Rafael/SanRafael';
+@import '../components/Circuitos/Circuitos';
