--- a/src/components/Circuitos/_Circuitos.scss
+++ b/src/components/Circuitos/_Circuitos.scss
@@ -4,20 +4,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    margin-bottom: 4rem;
     .circle{
         width: 20rem;
         height: 10rem;
         display: flex;
-        align-items: center;
         justify-content: center;
         border-radius: 0 0 20rem 20rem;
         background-color: $terciario;
         h2{
-            font-size: 1.6rem;
-            width: 15rem;
+            font-size: 2rem;
             color: $blanco;
-            font-family: $fuente_secundaria;
-            font-weight: 100;
+            font-family: $fuente_principal;
+            font-weight: 600;
             text-align: center;
         }
     }
@@ -27,13 +26,14 @@
         justify-content: center;
         gap: 4rem;
         width: 100%;
+        margin-bottom: 2rem;
         .arrowVisible{
             width: 4rem;
             cursor: pointer;
         }
         .arrowInvisible{
             width: 4rem;
-            opacity: .6;
+            opacity: .4;
             cursor:no-drop;
         }
         .circuitoContainer{
@@ -60,11 +60,13 @@
             }
             h3{
                 font-family: $fuente_principal;
-                font-size: 2rem;
+                font-size: 3.5rem;
                 color: $principal;
+                margin: 3rem 0;
                 span{
                     font-weight: 900;
                     color: $secundario;
+                    text-transform: capitalize;
                 }
             }
             .lugaresGrid{
@@ -74,7 +76,7 @@
                 gap: 3rem;
                 .card{
                     width: 20rem;
-                    height: 40rem;
+                    height: 35rem;
                     position: relative;
                     cursor: pointer;
                     transition: all .5s;
@@ -86,7 +88,7 @@
                         object-fit: cover;
                     }
                     .infoCard{
-                        background-color: rgba(0, 0, 0, .4);
+                        background-color: rgba(0, 0, 0, .8);
                         position: absolute;
                         top: 0;
                         left: 0;
@@ -96,6 +98,31 @@
                         transition: all .5s;
                         -webkit-transition: all .5s;
                         -moz-transition: all .5s;
+                        padding: 1rem;
+                        display: grid;
+                        align-content: center;
+                        justify-items: center;
+                        h4,p,span{
+                            font-family: $fuente_principal;
+                            color: $aux;
+                        }
+                        h4{
+                            font-size: 2.5rem;
+                            font-weight: 700;
+                            margin: 0;
+                            margin-bottom: 1rem;
+                            width: 90%;
+                        }
+                        p{
+                            font-size: 1.3rem;
+                            font-weight: 300;
+                            width: 80%;
+                        }
+                        span{
+                            font-size: 1.5rem;
+                            font-weight: 500;
+                            width: 80%;
+                        }
                     }
                     &.selected{
                         width: 30rem;
