--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -9,3 +9,4 @@
 @import '../components/Header/Header';
 @import '../components/San Rafael/SanRafael';
 @import '../components/Circuitos/Circuitos';
+@import '../components/Footer/Footer';
