--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -6,6 +6,13 @@
     background-color: $gris;
     font-family: $fuente_principal;
     color: $aux;
+    @include tablet{
+        flex-direction: column;
+        height: 100%;
+        gap: 2rem;
+        text-align: center;
+        padding: 2rem;
+    }
     .posadaInfo{
         width: 30rem;
         h3{
@@ -20,6 +27,9 @@
         }
         p{
             font-weight: 100;
+        }
+        @include tablet{
+            width: 20rem;
         }
     }
     .contacto{
@@ -36,9 +46,11 @@
             text-transform: uppercase;
             font-weight: 500;
         }
-        img{
-            width: 3rem;
-            margin-left: 1rem;
+        a{
+            img{
+                margin-left: 1rem;
+                width: 3rem;
+            }
         }
     }
 }
