Se agrego la seccion de ubicacion consumiendo la api de google maps.

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -12,4 +12,5 @@
 @import '../components/San Rafael/SanRafael';
 @import '../components/Circuitos/Circuitos';
 @import '../components/Ambientes/Ambientes';
+@import '../components/Ubicacion/Ubicacion';
 @import '../components/Footer/Footer';
