--- a/src/components/HeaderPosada/_Header.scss
+++ b/src/components/HeaderPosada/_Header.scss
@@ -25,6 +25,7 @@
             text-transform: uppercase;
             font-weight: 900;
             margin-bottom: .5rem;
+            color: $secundario;
             @include tablet{
                 text-align: center;
                 font-size: 3.5rem;
@@ -34,6 +35,7 @@
         p{
             font-size: 1.5rem;
             width: 40rem;
+            font-weight: 300;
             @include tablet{
                 width: 35rem;
                 text-align: center;
@@ -42,5 +44,8 @@
     }
     video{
         width: 45rem;
+        @include tablet{
+            width: 35rem;               
+        }
     }
 }
