Se agrego banner y contacto section a la pagina de contacto y se realizo la logica para manejar el estado del formulario de contacto

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -13,4 +13,5 @@
 @import '../components/Circuitos/Circuitos';
 @import '../components/Ambientes/Ambientes';
 @import '../components/Ubicacion/Ubicacion';
+@import '../components/Contacto/Contacto';
 @import '../components/Footer/Footer';
