Se corrigieron errores de estilos y se agrego el mobile a contacto

--- a/src/components/Circuitos/_Circuitos.scss
+++ b/src/components/Circuitos/_Circuitos.scss
@@ -34,6 +34,10 @@
         gap: 4rem;
         width: 100%;
         margin-bottom: 2rem;
+        @include tablet{
+            padding: 0 3rem;
+            margin: 0;
+        }
         .arrowInvisible,.arrowVisible{
             width: 4rem;
             @include tablet{
