--- a/src/components/Navbar/_Navbar.scss
+++ b/src/components/Navbar/_Navbar.scss
@@ -1,5 +1,5 @@
 .navbarContainer{
-    width: 100%;
+    width: 100vw;
     position: fixed;
     top: 0;
     left: 0;
@@ -12,6 +12,7 @@
         width: 100%;
         position: relative;
         #logo{
+            cursor: pointer;
             font-family: $fuente_secundaria;
             text-transform: uppercase;
             font-size: 2.5rem;
