--- a/src/components/Contacto/_Contacto.scss
+++ b/src/components/Contacto/_Contacto.scss
@@ -1,10 +1,14 @@
 .contactoContainer{
-    width: 100%;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
-    margin: 3rem;
+    gap: 5rem;
+    padding: 3rem;
+    @include tablet{
+        flex-direction: column;
+        width: 100%;
+    }
     input, textarea{
         padding: .5rem;
         border: 1px solid $aux;
@@ -13,16 +17,22 @@
         outline: none;
     }
     .infoContacto{
-        width: 40%;
+        width: 30%;
         font-family: $fuente_principal;
+        @include tablet{
+            width: 80%;
+        }
         h2{
             font-size: 3.5rem;
             font-weight: 800;
             text-transform: uppercase;
+            @include tablet{
+                text-align: center;
+            }
         }
         p{
-            font-size: 1.5rem;
-            font-weight: 200;
+            font-size: 1.8rem;
+            font-weight: 300;
         }
     }
     .contactoForm{
