Se corrigieron estilos

--- a/src/components/Ambientes/_Ambientes.scss
+++ b/src/components/Ambientes/_Ambientes.scss
@@ -3,6 +3,10 @@
     display: grid;
     align-content: center;
     justify-items: center;
+    @include tablet{
+        height: 100%;
+        margin: 4rem 0;
+    }
     .ambientesCarrusel{
         display: flex;
         align-items: center;
@@ -12,7 +16,7 @@
         width: 100vw;
         height: 30rem;
         @include tablet{
-            height: 35rem;               
+            height: 40rem;               
         }
         .ambienteCard{
             display: none;
@@ -68,6 +72,10 @@
             .ambienteInfo{
                 font-family: $fuente_principal;
                 width: 40rem;
+                padding: 0 2rem;
+                display: grid;
+                align-content: center;
+                justify-items: center;
                 @include tablet{
                     width: auto;
                     text-align: center;       
@@ -77,7 +85,9 @@
                     text-transform: uppercase;
                     font-weight: 700;
                     color: $principal;
+                    margin-bottom: 0;
                     @include tablet{
+                        width: 20rem;
                         font-size: 2.5rem;
                     }
                 }
