--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -29,7 +29,7 @@
             font-weight: 100;
         }
         @include tablet{
-            width: 20rem;
+            width: 80%;
         }
     }
     .contacto{
