--- a/src/components/HeaderInicio/_Header.scss
+++ b/src/components/HeaderInicio/_Header.scss
@@ -6,9 +6,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    height: 100vh;
     h2{
         width: 100%;
-        height: 100%;
         font-family: $fuente_principal;
         background-color: $blanco;
         font-size: 10rem;
