--- a/src/components/Navbar/_Navbar.scss
+++ b/src/components/Navbar/_Navbar.scss
@@ -54,22 +54,23 @@
                     height: 100vh;
                     width: 50%;
                     padding: 0;
+                    box-shadow: -1.5rem 0rem 4rem -.6rem #000000b1;
                     select,a{
-                        font-size: 1.5rem;
+                        font-size: 1.6rem;
+                        text-transform: uppercase;
                     }
                 }
             }
             @include tablet{
-                background-color: rgba(0, 0, 0, .5);
                 display: flex;
                 justify-content: flex-end;
                 width: 100vw;
                 position: absolute;
                 top: 100%;
                 left: 300%;
-                transition: all .6s;
-                -webkit-transition: all .6s;
-                -moz-transition: all .6s;
+                transition: all .2s;
+                -webkit-transition: all .2s;
+                -moz-transition: all .2s;
                 overflow: hidden;
                 &.active{
                     left: 0%;
